# OpenSourceGuardian

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py
.streamlit/: config.toml
app/ingestion/: clone_repo.py  dependency_file_finder.py  detect_language.py  parser.py
app/llm/: llm_client.py  prompt.py
app/services/: repository_service.py
app/vulnerability/: osv_client.py
